added the Buttons in index.js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,8 +61,12 @@
               <div class="card-header"><%= movie.name %></div>
               <div class="card-body">
                 <p class="card-text">Release Date: <%= movie.releaseDate %></p>
-                <a href="#" class="btn btn-danger">Delete</a>
-                <a href="#" class="btn btn-primary">Update</a>
+                <form method="post" action="/movies/<%= movie._id %>?_method=DELETE">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+                <form method="get" action="/movies/<%= movie._id %>/edit">
+                  <button type="submit" class="btn btn-primary">Update</button>
+                </form>
               </div>
             </div>
           </div>
@@ -93,6 +97,7 @@
     ></script>
   </body>
 </html>
+
 
 <style>
   body {
